--- a/python01_remote.ipynb
+++ b/python01_remote.ipynb
@@ -2167,6 +2167,422 @@
    "metadata": {}
   },
   {
+   "source": [
+    "## Questions:\n",
+    "- How can I store multiple values?\n",
+    "\n",
+    "## Objectives:\n",
+    "- Explain why programs need collections of values.\n",
+    "- Write code that creates lists and does the following operations on them:\n",
+    "  - Indexing\n",
+    "  - Slicing\n",
+    "  - Modifying through assignment\n",
+    "  - Modifying through a method call"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Storing Many Values\n",
+    "- Working with thousands of values can be cumbersome.\n",
+    "- List store multiple values as one entity and make it easier for us to work with them in bulk.\n",
+    "- To store objects in a list, type a comma-delimited list between brackets: `[item01, item02, item03]`.\n",
+    "- The `len()` function tells you how many items are in the list."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Pressures: [0.273, 0.275, 0.277, 0.275, 0.276]\nLength: 5\n"
+    }
+   ],
+   "source": [
+    "pressures = [0.273, 0.275, 0.277, 0.275, 0.276]\n",
+    "print('Pressures:', pressures)\n",
+    "print('Length:', len(pressures))"
+   ]
+  },
+  {
+   "source": [
+    "## Indexing Items\n",
+    "- You can index items from a list just like strings.\n",
+    "- Things to remember:\n",
+    "  - Index (access) objects by using bracket notation: `list_name[position]`.\n",
+    "  - Counting starts at 0.\n",
+    "  - Slices start with the first index and go up to, but not including, the last index."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Zeroth item of pressures: 0.273\nFourth item of pressures: 0.276\n"
+    }
+   ],
+   "source": [
+    "print('Zeroth item of pressures:', pressures[0])\n",
+    "print('Fourth item of pressures:', pressures[4])"
+   ]
+  },
+  {
+   "source": [
+    "## Changing List Values\n",
+    "- You can use bracket notation on the left side of an assignement expression to replace a specific item in a list."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Pressures is 0.273\nPressures is now 0.265\n"
+    }
+   ],
+   "source": [
+    "print('Pressures is', pressures[0])\n",
+    "pressures[0] = 0.265\n",
+    "print('Pressures is now', pressures[0])"
+   ]
+  },
+  {
+   "source": [
+    "## Different Datatypes\n",
+    "- One list can contain multiple data types."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goals = [1, 'Create lists.', 2, 'Extract items from lists.', 3, 'Modify lists.']"
+   ]
+  },
+  {
+   "source": [
+    "## Appending Items to a List\n",
+    "- `list_name.append()` adds items to the end of a list.\n",
+    "- `append()` is a method (a function that belongs to an object).\n",
+    "- You can use methods to change objects or take action with them.\n",
+    "- Methods use the dot (`.`) notation just like modules and libraries."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "`primes` is initially [2, 3, 5]\n`primes` has become [2, 3, 5, 7]\n"
+    }
+   ],
+   "source": [
+    "primes = [2, 3, 5]\n",
+    "print('`primes` is initially', primes)\n",
+    "primes.append(7)\n",
+    "print('`primes` has become', primes)"
+   ]
+  },
+  {
+   "source": [
+    "- Lists also have the `extend()` method. Can you tell the difference between `append()` and `extend()`?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "`primes` is currently [2, 3, 5, 7]\n`primes` has now become [2, 3, 5, 7, 11, 13, 17, 19]\n`primes` has finally become [2, 3, 5, 7, 11, 13, 17, 19, [37, 41, 43, 47]]\n"
+    }
+   ],
+   "source": [
+    "teen_primes = [11, 13, 17, 19]\n",
+    "middle_aged_primes = [37, 41, 43, 47]\n",
+    "print('`primes` is currently', primes)\n",
+    "primes.extend(teen_primes)\n",
+    "print('`primes` has now become', primes)\n",
+    "primes.append(middle_aged_primes)\n",
+    "print('`primes` has finally become', primes)"
+   ]
+  },
+  {
+   "source": [
+    "- Lists can contain multiple datatypes, even other lists!\n",
+    "- `extend()` maintains the flat list structure while `append()` takes whatever you give it and places it in the next spot.\n",
+    "- After running the above code, the last item in the list is an entire list: `[37, 41, 43, 47]]`."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Removing Items\n",
+    "- `del` deletes items from a list."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "`primes` before removing last item: [2, 3, 5, 7, 9]\n`primes` after removing last item: [2, 3, 5, 7]\n"
+    }
+   ],
+   "source": [
+    "primes = [2, 3, 5, 7, 9]\n",
+    "print('`primes` before removing last item:', primes)\n",
+    "del primes[4]\n",
+    "print('`primes` after removing last item:', primes)"
+   ]
+  },
+  {
+   "source": [
+    "## Empty Lists\n",
+    "- Use `[]` to designate a list with no values.\n",
+    "- This is helpful when building new lists from scratch."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Indexing Strings\n",
+    "- Recall that we can index characters from a string just like lists."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Zeroth character: c\nThird character: b\n"
+    }
+   ],
+   "source": [
+    "element = 'carbon'\n",
+    "print('Zeroth character:', element[0])\n",
+    "print('Third character:', element[3])"
+   ]
+  },
+  {
+   "source": [
+    "## Strings are Immutable\n",
+    "- Python recognized two types of collections: mutable and immutable.\n",
+    "- *Mutable* collections can be changed in place.\n",
+    "- *Immutable* collections cannot be changed. The only way to change them is to re-assign their variable.\n",
+    "- Lists are mutable while strings are immutable."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-93-6dc46761ce07>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0melement\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'C'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "element[0] = 'C'"
+   ]
+  },
+  {
+   "source": [
+    "## Indexing Errors\n",
+    "- Python reports an `IndexError` when we try to reference a value that does not exist."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-94-f178a3be0901>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'99th element of element is:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0melement\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m99\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "print('99th element of element is:', element[99])"
+   ]
+  },
+  {
+   "source": [
+    "## Exercises\n",
+    "\n",
+    "**If both `low` and `high` are non-negative integers, how long is the list `values[low:high]`?**"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "The list `values[low:high]` has `high - low` elements."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "**Try out the following code.**\n",
+    "\n",
+    "```python\n",
+    "print('String to list:', list('tin'))\n",
+    "print('List to string:', ''.join(['g', 'o', 'l', 'd']))\n",
+    "```"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "String to list: ['t', 'i', 'n']\nList to string: gold\n"
+    }
+   ],
+   "source": [
+    "print('String to list:', list('tin'))\n",
+    "print('List to string:', ''.join(['g', 'o', 'l', 'd']))"
+   ]
+  },
+  {
+   "source": [
+    "**Given this, what does `list('some string')` and `'-'.join(['x', 'y', 'z'])` do?**"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "['s', 'o', 'm', 'e', ' ', 's', 't', 'r', 'i', 'n', 'g']\nx-y-z\n"
+    }
+   ],
+   "source": [
+    "print(list('some string'))\n",
+    "print('-'.join(['x', 'y', 'z']))"
+   ]
+  },
+  {
+   "source": [
+    "**What will the following code do? Try it out.**\n",
+    "\n",
+    "```python\n",
+    "element = 'helium'\n",
+    "print(element[-1])\n",
+    "```"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "m\n"
+    }
+   ],
+   "source": [
+    "element = 'helium'\n",
+    "print(element[-1])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
