Correct small errors

--- a/python01_03.ipynb
+++ b/python01_03.ipynb
@@ -300,7 +300,7 @@
     "- Another string to number:\n",
     "\n",
     "```python\n",
-    "print('String to float:', float('Hellow world!))\n",
+    "print('String to float:', float('Hello world!))\n",
     "```\n",
     "\n",
     "**Given this information, what do you expect this code to do?**\n",
